Updated in response to new maven-javadoc-plugin update for MJAVADOC-568.